@@ -4,7 +4,7 @@ OBJ_UP=rdup-up.o entry.o usage-up.o signal.o link.o getdelim.o abspath.o rm.o fs
 HDR=rdup.h rdup-tr.h rdup-up.h io.h
 CMD=rdup rdup-tr rdup-up
 # installs to /usr/lib/rdup
-SH=rdup-ln.sh
+SH=rdup-ln.sh rdup-simple.sh
 MAN1_IN=rdup.1 rdup-tr.1 rdup-up.1
 MAN7_IN=rdup-backups.7
 
