@@ -1,5 +1,5 @@
 '\" t
-.TH RDUP-BACKUPS 7 "15 Dec 2008" "0.6.4" "rdup"
+.TH RDUP-BACKUPS 7 "15 Dec 2008" "0.6.5" "rdup"
 
 .SH NAME
 rdup-backups \- introduction into making backups with rdup
