@@ -1,10 +1,15 @@
+xx Jan 2009: 0.6.5 Miek <miek@miek.nl>
+  * rdup-simple back as rdup-simple.sh
+  * rdup-ln.sh: small tweaks
+
+
 30 Dec 2008: 0.6.4 Miek <miek@miek.nl>
  - further refinements and tweaks -
   * rdup-up: further updates and refinements
   * rdup-up: added strippath() function to strip leading path components
   * doc: minor updates to the manual pages, added a rdup-simple like
     script to rdup-backups.7
-  * rdup-ln: a shell script for checking and copying a previous
+  * rdup-ln.sh: a shell script for checking and copying a previous
     rdup backup. Depends on GNU date and GNU cp. Installs into 
     /usr/lib/rdup/. Previously a small script called rdup-snap-link
     did this.
